# automata_practical_exam_4579

./: README.md  pyproject.toml
examples/: dfa_usage.py  turing_usage.py
src/automata_toolkit/: __init__.py  dfa.py  turing.py
tests/: test_dfa.py  test_turing.py
