[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "automata-toolkit"
version = "0.1.0"
description = "Python implementations of DFA equivalence checking and prime-length Turing Machine for Automata Theory"
authors = ["hibat-abdulroof<hibatxx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = [https://github.com/Hibat-Abdulroof/automata_practical_exam_4579](https://github.com/Hibat-Abdulroof/automata_practical_exam_4579)
keywords = ["automata", "dfa", "turing-machine", "computer-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
black = "^22.0"
flake8 = "^4.0"
mypy = "^0.910"

[tool.poetry.scripts]
dfa-demo = "examples.dfa_usage:main"
tm-demo = "examples.turing_usage:main"

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--verbose --cov=src --cov-report=term-missing"
testpaths = ["tests"]
